# nebk

./: CMakeLists.txt  LICENSE  README.md
config/: loader-linker.ld
src/bootloader/: CMakeLists.txt  floppy.asm  loader.asm  loader_pe.asm
